# AIPPT

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILLS.md  TESTING-RESULTS.md  TESTING.md  UITESTING.md  WORKFLOWS.md  aippt.py  backup.sh  build-and-push.sh  dirs.yaml  docker-compose.yml  gateway.yaml  gateway.yaml.example  git-course-enhanced.md  git-course-plain.md  mcp_servers.example.json  models.yaml  models.yaml.example  pyproject.toml  requirements.txt  restore.sh  serve.sh  spiderman.md  templates.yaml  test-sections.md  test_reverse_enhance.py
aippt/: __init__.py  analyze.py  builder.py  catalog.py  chat.py  cli.py  config.py  dbinfo.py  deck_review.py  enhancer.py  export.py  graph.py  images.py  improve.py  ingest.py  layouts.py  llm.py  mcp.py  metadata.py  parser.py  patch.py  pipeline.py  ppt2outline.py  pptxgenjs_gen.py  pptxgenjs_validate.py  preview.py  remix.py  schema.sql  sections.py  source_resolver.py  template_merge.py  templates_store.py  thumbnails.py  writeback.py
docs/: backup-restore.rst  cli.rst  conf.py  configuration.rst  export-images.rst  export-slide-images.md  index.rst  make.bat  overview.rst  prd-sections.md  requirements.txt  sections-implementation-summary.md  testing-metadata-and-file-mgmt.md  todo.md  web-ui.rst
examples/: aippt-overview.md  quarterly-review-sections.md
lib/: merge.py  pptx_helpers.py  pptxgenjs-helpers.mjs  pptxgenjs-masters.mjs  section_parser.py
outlines/: octant-overview-outline.md
scripts/: Export-SlidesToImages.ps1  clean_deck.py
tests/: conftest.py  (+63 more)
(+172 files in other folders)
