[project]
name = "aippt"
version = "2.0.0"
description = "Convert markdown outlines to PowerPoint presentations with AI enhancement"
requires-python = ">=3.10"

[project.scripts]
aippt = "aippt.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "-m 'not e2e and not live'"
markers = [
    "e2e: end-to-end tests requiring API keys and optional PowerPoint",
    "live: live LLM gateway tests requiring API keys and network access",
]
